sdk-java: saveJson and saveBinary should handle paths with no parent