@@ -1,4 +1,4 @@
-// Copyright 2021 Touca, Inc. Subject to Apache-2.0 License.
+// Copyright 2023 Touca, Inc. Subject to Apache-2.0 License.
 
 package io.touca.core;
 
@@ -146,7 +146,7 @@ public class Client {
           this.options.suite, this.options.version);
       this.cases.put(name, testcase);
     }
-    this.threadMap.put(Thread.currentThread().getId(), name);
+    this.threadMap.put(Thread.currentThread().threadId(), name);
     this.activeCase = name;
   }
 
@@ -247,7 +247,10 @@ public class Client {
     final Case[] items = this.save(path, cases);
     final byte[] content = this.serialize(items);
     try {
-      Files.createDirectories(path.getParent());
+      Path parent = path.getParent();
+      if (parent != null) {
+        Files.createDirectories(parent);
+      }
       Files.write(path, content);
     } catch (IOException ex) {
       throw new ToucaException("failed to create file %s: %s", path, ex.getMessage());
@@ -276,7 +279,10 @@ public class Client {
     final Case[] items = this.save(path, cases);
     final String content = this.makeJson(items);
     try {
-      Files.createDirectories(path.getParent());
+      Path parent = path.getParent();
+      if (parent != null) {
+        Files.createDirectories(parent);
+      }
       Files.write(path, content.getBytes(StandardCharsets.UTF_8));
     } catch (IOException ex) {
       throw new ToucaException("failed to create file %s: %s", path, ex.getMessage());
@@ -345,7 +351,7 @@ public class Client {
     if (options.concurrency) {
       return activeCase;
     }
-    return threadMap.get(Thread.currentThread().getId());
+    return threadMap.get(Thread.currentThread().threadId());
   }
 
   private byte[] serialize(final Case[] testcases) {
